# awful_aj

./: .dirdocs.nu  .gitattributes  .gitignore  Cargo.toml  Cross.toml  DEBIAN.md  GIT_FLOW.md  Justfile  LICENSE  README.md  RELEASE.md  SIGNING.md  all-mini-lm-l12-v2  config.yaml  env  rust-toolchain.toml  test.db
.github/workflows/: release.yml
docs/: .gitignore  book.toml
docs/src/: README.md  SUMMARY.md  advanced-usage.md  build.md  config.md  downstream-projects.md  memories.md  moldable-outputs.md  performance.md  pretty-printing.md  rag.md  sessions.md  troubleshooting.md
docs/src/install/: README.md  linux.md  macos.md  windows.md
docs/src/templates/: README.md  defaults.md  download.md  examples.md
docs/src/use/: README.md  ask.md  init.md  interactive.md  library.md  reset.md
migrations/2023-10-17-221421_addMessagesAwfulConfigsAndSessions/: down.sql  up.sql
src/: api.rs  brain.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  pretty.rs  schema.rs  session_messages.rs  template.rs  vector_store.rs
templates/: default.yaml  news_parser.yaml  reading_buddy.yaml  simple_question.yaml
