[package]
name = "awful_aj"
version = "0.3.10"
edition = "2024"
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
description = "A CLI for interacting with OpenAI compatible APIs"
license = "CC-BY-SA-4.0"
repository = "https://github.com/graves/awful_aj.git"
readme = "README.md"
homepage = "https://github.com/graves/awful_aj"
keywords = ["openai", "chatgpt", "llm", "cli", "embeddings"]
# Use the modern feature resolver
resolver = "2"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE*",
  "src/**",
  # Only ship tiny, essential templates (or remove if not needed at runtime)
  "templates/*.yaml",
  # If your library needs migrations at runtime, keep them:
  # "migrations/*.sql",
]

[[bin]]
name = "aj"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# HTTP / OpenAI
async-openai = { version = "0.30.1", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "http2",
  "charset",
  "rustls-tls"
] }

# CLI / terminal
clap = { version = "4.4.6", features = ["derive", "color", "env"] }
crossterm = "0.29.0"
# Make sure indicatif/console-style APIs are available with std
console = { version = "0.16", default-features = false, features = ["std", "ansi-parsing", "unicode-width"] }

# Data / time / utils
chrono = "0.4.31"
once_cell = "1.18.0"
regex = "1.10.0"
sha256 = "1.6.0"
dirs = "6.0.0"
directories = "6.0.0"
futures = "0.3.28"
tempfile = "3.8.0"

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"

# DB
diesel = { version = "2.2.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Tokenization
tiktoken-rs = { version = "0.7.0", default-features = false }

# ANN index
hora = "0.1.1"

# Embeddings - Pure Rust ML framework
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
tokenizers = "0.22.1"


# Async runtime
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
console = { version = "0.16", default-features = true, features = ["std", "ansi-parsing", "unicode-width"] }

[dev-dependencies]
httpmock = "0.6.8"
