[package]
name = "awful_aj"
version = "1.0.0"
edition = "2024"
authors = ["Thomas Gentry <thomas@awfulsec.com>"]
description = "A CLI for interacting with OpenAI compatible APIs"
license = "CC-BY-SA-4.0"
repository = "https://github.com/graves/awful_aj.git"
readme = "README.md"
homepage = "https://github.com/graves/awful_aj"
keywords = ["openai", "chatgpt", "llm", "cli", "embeddings"]

resolver = "2"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE*",
  "src/**",
  "templates/*.yaml",
]

[[bin]]
name = "aj"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# HTTP / OpenAI
async-openai = { version = "0.32.2", default-features = false, features = ["rustls", "chat-completion"] }
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "http2",
  "charset",
  "rustls-tls"
] }

# CLI / terminal
clap = { version = "4.5.51", features = ["derive", "color", "env"] }
crossterm = "0.29.0"
# Make sure indicatif/console-style APIs are available with std
console = { version = "0.16", default-features = false, features = ["std", "ansi-parsing", "unicode-width"] }
termimad = "0.34.0"
syntect = "5.2"

# Data / time / utils
chrono = "0.4.31"
once_cell = "1.18.0"
regex = "1.10.0"
sha256 = "1.6.0"
dirs = "6.0.0"
directories = "6.0.0"
futures = "0.3.28"
tempfile = "3.8.0"

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
indicatif = { version = "0.18.3", features = ["rayon"] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.34"

blake3 = "1"
bincode = { version = "2.0.1", features = ["serde"] }

# DB
diesel = { version = "2.2.9", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Tokenization
tiktoken-rs = { version = "0.9.1", default-features = false }

# ANN index
hora = "0.1.1"

# Embeddings - Pure Rust ML framework
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio", "ureq"] }
tokenizers = "0.22.1"


# Async runtime
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }

# Parallel processing
rayon = "1.10"

[target.'cfg(windows)'.dependencies]
console = { version = "0.16", default-features = true, features = ["std", "ansi-parsing", "unicode-width"] }

[dev-dependencies]
httpmock = "0.8.2"

[package.metadata.deb]
maintainer = "Thomas Gentry <thomas@awfulsec.com>"
copyright = "2024, Thomas Gentry <thomas@awfulsec.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
Awful Jade (aj) is a sophisticated command-line LLM client that combines:
- OpenAI-compatible API support for local and remote models
- Semantic memory with HNSW vector indexing
- Token-budgeted working memory
- Session persistence and conversation management
- YAML-based templating system
- RAG (Retrieval-Augmented Generation) with document embeddings
- Pure Rust ML embeddings (no Python dependencies)
"""
depends = "libc6, libgcc-s1"
section = "utils"
priority = "optional"
assets = [
  ["target/release/aj", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/awful-aj/", "644"],
  ["LICENSE", "usr/share/doc/awful-aj/", "644"],
  ["templates/*.yaml", "usr/share/awful-aj/templates/", "644"],
]
# Configuration files that should be preserved on upgrade
conf-files = []
